project(
    'io.elementary.archive',
    version: '0.1.1'
)

install_data(
    'data/' + meson.project_name() + '-compress.contract',
    install_dir: join_paths(get_option('datadir'), 'contractor')
)

install_data(
    'data/' + meson.project_name() + '-extract.contract',
    install_dir: join_paths(get_option('datadir'), 'contractor')
)
